<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AMI8000IOInfo" Id="{907b4956-497f-41ba-9b73-91c652065f98}">
    <Declaration><![CDATA[TYPE ST_AMI8000IOInfo :
STRUCT
	bAxisOperational 	: BOOL;
	bNotMoving			: BOOL;
	rActualPosition		: LREAL;
	rActualVelocity		: LREAL;
	rActualTorque		: LREAL;
	bAxisHomed			: BOOL;
	bAxisError			: BOOL;
	nErrorCode			: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>