<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MotorsJog" Id="{18bbf376-4b3f-4666-ba41-a31b868b37db}">
    <Declaration><![CDATA[TYPE ST_MotorsJog :
STRUCT
	
	//Boolean variables linked to HMI for manual control of every 28 Axis in the project
	bMotorsJogFwd 		: ARRAY[1..3] OF BOOL;
	bMotorsJogBwd 		: ARRAY[1..3] OF BOOL;
	
	bValvesJogFwd 		: ARRAY[1..5] OF BOOL;
	bValvesJogBwd 		: ARRAY[1..5] OF BOOL;
		
	bPumpsLinearJogFwd 	: ARRAY[1..10] OF BOOL;
	bPumpsLinearJogBwd 	: ARRAY[1..10] OF BOOL;
		
	bPumpsRotaryJogFwd	: ARRAY[1..10] OF BOOL;
	bPumpsRotaryJogBwd	: ARRAY[1..10] OF BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>