<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_ManualControl" Id="{d07ba183-6201-49c6-acdd-4e668144af08}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_ManualControl
VAR
	elseif: INT;
	rMotorsActualPosition : ARRAY[1..3] OF LREAL;
	rValvesActualPosition : ARRAY[1..5] OF LREAL;
	rPumpsActualPosition  : ARRAY[1..10] OF LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Motors Manual jog handling 
MotorsJog();
MotorsActualPosition();]]></ST>
    </Implementation>
    <Action Name="MotorsActualPosition" Id="{634c759f-49ee-43fa-86d1-7097ca0492ea}">
      <Implementation>
        <ST><![CDATA[// Get Motors Actual Position
rMotorsActualPosition[1] := GVL_Motion.aMotors[1].GetPosition();
rMotorsActualPosition[2] := GVL_Motion.aMotors[2].GetPosition();
rMotorsActualPosition[3] := GVL_Motion.aMotors[3].GetPosition();
rValvesActualPosition[1] := GVL_Motion.aValvesObj[1].GetPosition();
rValvesActualPosition[2] := GVL_Motion.aValvesObj[2].GetPosition();
rValvesActualPosition[3] := GVL_Motion.aValvesObj[3].GetPosition();
rValvesActualPosition[4] := GVL_Motion.aValvesObj[4].GetPosition();
rValvesActualPosition[5] := GVL_Motion.aValvesObj[5].GetPosition();
rPumpsActualPosition[1] := GVL_Motion.aPumpsLinear[1].GetPosition();
rPumpsActualPosition[2] := GVL_Motion.aPumpsLinear[2].GetPosition();
rPumpsActualPosition[3] := GVL_Motion.aPumpsLinear[3].GetPosition();
rPumpsActualPosition[4] := GVL_Motion.aPumpsLinear[4].GetPosition();
rPumpsActualPosition[5] := GVL_Motion.aPumpsLinear[5].GetPosition();
rPumpsActualPosition[6] := GVL_Motion.aPumpsLinear[6].GetPosition();
rPumpsActualPosition[7] := GVL_Motion.aPumpsLinear[7].GetPosition();
rPumpsActualPosition[8] := GVL_Motion.aPumpsLinear[8].GetPosition();
rPumpsActualPosition[9] := GVL_Motion.aPumpsLinear[9].GetPosition();
rPumpsActualPosition[10] := GVL_Motion.aPumpsLinear[10].GetPosition();



//Linear Motors - M1, M2, M3
GVL_Motion.M1Motor.rActualPosition := F_ROUND_REAL(rInput := TO_REAL(rMotorsActualPosition[1]), iDecimalPlaces := 2)* -1;
GVL_Motion.M2Motor.rActualPosition := F_ROUND_REAL(rInput := TO_REAL(rMotorsActualPosition[2]), iDecimalPlaces := 2)* -1;
GVL_Motion.M3Motor.rActualPosition := F_ROUND_REAL(rInput := TO_REAL(rMotorsActualPosition[3]), iDecimalPlaces := 2)* -1;

//Vici Valves - M4 to M8
GVL_Motion.aValves[1].rActualPosition := F_ROUND_REAL(rInput := TO_REAL(rValvesActualPosition[1]), iDecimalPlaces := 2);
GVL_Motion.aValves[2].rActualPosition := F_ROUND_REAL(rInput := TO_REAL(rValvesActualPosition[2]), iDecimalPlaces := 2);
GVL_Motion.aValves[3].rActualPosition := F_ROUND_REAL(rInput := TO_REAL(rValvesActualPosition[3]), iDecimalPlaces := 2);
GVL_Motion.aValves[4].rActualPosition := F_ROUND_REAL(rInput := TO_REAL(rValvesActualPosition[4]), iDecimalPlaces := 2);
GVL_Motion.aValves[5].rActualPosition := F_ROUND_REAL(rInput := TO_REAL(rValvesActualPosition[5]), iDecimalPlaces := 2);

//Linear pumps - 1 to 10
GVL_Motion.aPumps[1].Linear.rActualPosition  := F_ROUND_REAL(rInput := TO_REAL(rPumpsActualPosition[1]), iDecimalPlaces := 2)* -1;
GVL_Motion.aPumps[2].Linear.rActualPosition  := F_ROUND_REAL(rInput := TO_REAL(rPumpsActualPosition[2]), iDecimalPlaces := 2)* -1;
GVL_Motion.aPumps[3].Linear.rActualPosition  := F_ROUND_REAL(rInput := TO_REAL(rPumpsActualPosition[3]), iDecimalPlaces := 2)* -1;
GVL_Motion.aPumps[4].Linear.rActualPosition  := F_ROUND_REAL(rInput := TO_REAL(rPumpsActualPosition[4]), iDecimalPlaces := 2)* -1;
GVL_Motion.aPumps[5].Linear.rActualPosition  := F_ROUND_REAL(rInput := TO_REAL(rPumpsActualPosition[5]), iDecimalPlaces := 2)* -1;
GVL_Motion.aPumps[6].Linear.rActualPosition  := F_ROUND_REAL(rInput := TO_REAL(rPumpsActualPosition[6]), iDecimalPlaces := 2)* -1;
GVL_Motion.aPumps[7].Linear.rActualPosition  := F_ROUND_REAL(rInput := TO_REAL(rPumpsActualPosition[7]), iDecimalPlaces := 2)* -1;
GVL_Motion.aPumps[8].Linear.rActualPosition  := F_ROUND_REAL(rInput := TO_REAL(rPumpsActualPosition[8]), iDecimalPlaces := 2)* -1;
GVL_Motion.aPumps[9].Linear.rActualPosition  := F_ROUND_REAL(rInput := TO_REAL(rPumpsActualPosition[9]), iDecimalPlaces := 2)* -1;
GVL_Motion.aPumps[10].Linear.rActualPosition := F_ROUND_REAL(rInput := TO_REAL(rPumpsActualPosition[10]), iDecimalPlaces := 2)* -1;]]></ST>
      </Implementation>
    </Action>
    <Action Name="MotorsJog" Id="{57b89f50-f3a8-44a2-8323-78bd3226c039}">
      <Implementation>
        <ST><![CDATA[//Manual Motors Moviment

//Manual Moviment motor 1 - Stage Collection Vertical Axis
GVL_Motion.aMotors[1].Jog(bFwd := GVL_HMI.ManualMov.bMotorsJogFwd[1], bBwd := GVL_HMI.ManualMov.bMotorsJogBwd[1]);
//Manual Moviment motor 2 - Sample Recovery Vertical Axis
GVL_Motion.aMotors[2].Jog(bFwd := GVL_HMI.ManualMov.bMotorsJogFwd[2], bBwd := GVL_HMI.ManualMov.bMotorsJogBwd[2]);
//Manual Moviment motor 3 - Sample Recovery Horizontal Axis
GVL_Motion.aMotors[3].Jog(bFwd := GVL_HMI.ManualMov.bMotorsJogFwd[3], bBwd := GVL_HMI.ManualMov.bMotorsJogBwd[3]);

//Manual Moviment M4 - Valve 1 
GVL_Motion.aValvesObj[1].Jog(bFwd := GVL_HMI.ManualMov.bValvesJogFwd[1], bBwd := GVL_HMI.ManualMov.bValvesJogBwd[1]);
//Manual Moviment M5 - Valve 2 
GVL_Motion.aValvesObj[2].Jog(bFwd := GVL_HMI.ManualMov.bValvesJogFwd[2], bBwd := GVL_HMI.ManualMov.bValvesJogBwd[2]);
//Manual Moviment M6 - Valve 3
GVL_Motion.aValvesObj[3].Jog(bFwd := GVL_HMI.ManualMov.bValvesJogFwd[3], bBwd := GVL_HMI.ManualMov.bValvesJogBwd[3]);
//Manual Moviment M7 - Valve 4
GVL_Motion.aValvesObj[4].Jog(bFwd := GVL_HMI.ManualMov.bValvesJogFwd[4], bBwd := GVL_HMI.ManualMov.bValvesJogBwd[4]);
//Manual Moviment M8 - Valve 5
GVL_Motion.aValvesObj[5].Jog(bFwd := GVL_HMI.ManualMov.bValvesJogFwd[5], bBwd := GVL_HMI.ManualMov.bValvesJogBwd[5]);

//Manual Moviment Pump 1 - Linear
GVL_Motion.aPumpsLinear[1].Jog(bFwd := GVL_HMI.ManualMov.bPumpsLinearJogFwd[1], bBwd := GVL_HMI.ManualMov.bPumpsLinearJogBwd[1]);
//Manual Moviment Pump 2 - Linear
GVL_Motion.aPumpsLinear[2].Jog(bFwd := GVL_HMI.ManualMov.bPumpsLinearJogFwd[2], bBwd := GVL_HMI.ManualMov.bPumpsLinearJogBwd[2]);
//Manual Moviment Pump 3 - Linear
GVL_Motion.aPumpsLinear[3].Jog(bFwd := GVL_HMI.ManualMov.bPumpsLinearJogFwd[3], bBwd := GVL_HMI.ManualMov.bPumpsLinearJogBwd[3]);
//Manual Moviment Pump 4 - Linear
GVL_Motion.aPumpsLinear[4].Jog(bFwd := GVL_HMI.ManualMov.bPumpsLinearJogFwd[4], bBwd := GVL_HMI.ManualMov.bPumpsLinearJogBwd[4]);
//Manual Moviment Pump 5 - Linear
GVL_Motion.aPumpsLinear[5].Jog(bFwd := GVL_HMI.ManualMov.bPumpsLinearJogFwd[5], bBwd := GVL_HMI.ManualMov.bPumpsLinearJogBwd[5]);
//Manual Moviment Pump 6 - Linear
GVL_Motion.aPumpsLinear[6].Jog(bFwd := GVL_HMI.ManualMov.bPumpsLinearJogFwd[6], bBwd := GVL_HMI.ManualMov.bPumpsLinearJogBwd[6]);
//Manual Moviment Pump 7 - Linear
GVL_Motion.aPumpsLinear[7].Jog(bFwd := GVL_HMI.ManualMov.bPumpsLinearJogFwd[7], bBwd := GVL_HMI.ManualMov.bPumpsLinearJogBwd[7]);
//Manual Moviment Pump 8 - Linear
GVL_Motion.aPumpsLinear[8].Jog(bFwd := GVL_HMI.ManualMov.bPumpsLinearJogFwd[8], bBwd := GVL_HMI.ManualMov.bPumpsLinearJogBwd[8]);
//Manual Moviment Pump 9 - Linear
GVL_Motion.aPumpsLinear[9].Jog(bFwd := GVL_HMI.ManualMov.bPumpsLinearJogFwd[9], bBwd := GVL_HMI.ManualMov.bPumpsLinearJogBwd[9]);
//Manual Moviment Pump 10 - Linear
GVL_Motion.aPumpsLinear[10].Jog(bFwd := GVL_HMI.ManualMov.bPumpsLinearJogFwd[10], bBwd := GVL_HMI.ManualMov.bPumpsLinearJogBwd[10]);]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="PRG_ManualControl">
      <LineId Id="356" Count="0" />
      <LineId Id="350" Count="0" />
      <LineId Id="358" Count="0" />
    </LineIds>
    <LineIds Name="PRG_ManualControl.MotorsActualPosition">
      <LineId Id="2" Count="43" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="PRG_ManualControl.MotorsJog">
      <LineId Id="296" Count="0" />
      <LineId Id="635" Count="0" />
      <LineId Id="603" Count="1" />
      <LineId Id="636" Count="0" />
      <LineId Id="605" Count="0" />
      <LineId Id="637" Count="0" />
      <LineId Id="606" Count="0" />
      <LineId Id="638" Count="0" />
      <LineId Id="607" Count="0" />
      <LineId Id="593" Count="0" />
      <LineId Id="639" Count="0" />
      <LineId Id="609" Count="0" />
      <LineId Id="640" Count="0" />
      <LineId Id="610" Count="0" />
      <LineId Id="641" Count="0" />
      <LineId Id="611" Count="0" />
      <LineId Id="642" Count="0" />
      <LineId Id="612" Count="0" />
      <LineId Id="643" Count="0" />
      <LineId Id="624" Count="1" />
      <LineId Id="644" Count="0" />
      <LineId Id="615" Count="0" />
      <LineId Id="645" Count="0" />
      <LineId Id="626" Count="0" />
      <LineId Id="646" Count="0" />
      <LineId Id="627" Count="0" />
      <LineId Id="647" Count="0" />
      <LineId Id="628" Count="0" />
      <LineId Id="648" Count="0" />
      <LineId Id="629" Count="0" />
      <LineId Id="649" Count="0" />
      <LineId Id="630" Count="0" />
      <LineId Id="650" Count="0" />
      <LineId Id="631" Count="0" />
      <LineId Id="651" Count="0" />
      <LineId Id="632" Count="0" />
      <LineId Id="652" Count="0" />
      <LineId Id="633" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>